2010-06-25  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/common/componentui.py:
	* flumotion/common/registry.py:
	* flumotion/component/consumers/httpstreamer/httpstreamer.xml:
	* flumotion/component/consumers/shout2/shout2.xml:
	* flumotion/scenario/steps/consumptionsteps.py:
	Add rank to wizard entries to set preferred consumers.
	Use accepted-format in consumers wizard entries to know if the
	consumer can be shown in the assistant.

2010-06-22  Jan Urbanski  <jurbanski@flumotion.com>

	reviewed by: Alvin Delagon

	* flumotion/component/misc/porter/porter.py:
	* flumotion/component/misc/porter/porter.xml:
	Add a new porter property, require-password. If set to False the porter
	does not perform user/password checking on component socket
	connections. Defaults to True.

2010-06-21  Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/test/test_registry.py:
	Fix tests.

2010-06-21  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Jan Urbanski

	* flumotion/common/registry.py:
	When a new version of flumotion gets installed, running managers
	reread the xml files but old code is used for parsing.
	Reload registry module is required to avoid inconsistencies between
	the reread registry xmls and the python module.

2010-06-21  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/extern/log/log.py:
	* flumotion/extern/log/test_log.py:
	Make adapting the same logger multiple times a noop.

2010-06-18  Julien Le Goff  <jlegoff@flumotion.com>

	* flumotion/admin/command/component.py:
	Add a command to get the components list along with their types
	and the host they are running on.

2010-06-17  Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/test/test_wizard_save.py:
	Fix tests.

2010-06-17  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Julien Le Goff

	* data/glade/Makefile.am:
	* data/glade/consumption-wizard.glade:
	* flumotion/admin/assistant/interfaces.py:
	* flumotion/common/registry.py: