@@ -1,3 +1,8 @@
+2010-06-28  Julien Le Goff  <jlegoff@flumotion.com>
+
+	* flumotion/admin/command/component.py:
+	Add new command to get upstream components from a component id.
+
 2010-06-25  Josep Joan Ribas  <jribas@flumotion.com>
 
 	reviewed by: Xavier Queralt
